--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 <body>
 
 <header>
-    <h1>Мой каталог</h1>
-    <p>Заказы через Instagram / WhatsApp</p>
+    <h1>Freetour</h1>
+    <p>Всё для байкпакинга</p>
 </header>
 
 <div class="container">
@@ -89,11 +89,11 @@
 
         <!-- ТОВАР 1 -->
         <div class="item">
-            <img src="https://via.placeholder.com/400x400" alt="Товар 1">
+            <img src="05_c33d7afc-b279-483c-8d2c-bdd36ae4d002.webp" alt="Товар 1">
             <div class="item-content">
-                <div class="item-title">Товар №1</div>
-                <div class="item-price">1 500 ₽</div>
-                <a href="https://instagram.com/youraccount" class="item-button">
+                <div class="item-title">Rhinowalk сумка на вилку</div>
+                <div class="item-price">2500 сом</div>
+                <a href="https://instagram.com/freetour.kg" class="item-button">
                     Заказать
                 </a>
             </div>
