--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             display: block;
             text-align: center;
             padding: 10px;
-            background: #000;
+            background: #FAC898;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
