--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <title>Каталог</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #FAC898;
-            color: #333;
-        }
+<style>
+  body {
+    margin: 0;    /* ЗАДНИЙ ФОН ЗА ТОВАРАМИ */
+    font-family: Arial, sans-serif;
+    background-image: url("images/bg.jpg"); /* ФОТКА */
+    background-size: cover;      /* растянуть на весь экран */
+    background-repeat: no-repeat; /* без повторения */
+    background-position: center;  /* по центру */
+    color: #333;
+}
 
         header {
             background: #000;
