--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   body {
     margin: 0;    /* ЗАДНИЙ ФОН ЗА ТОВАРАМИ */
     font-family: Arial, sans-serif;
-    background-image: url("images/bg.jpg"); /* ФОТКА */
+    background-image: url("SRMR-3.jpg"); /* ФОТКА */
     background-size: cover;      /* растянуть на весь экран */
     background-repeat: no-repeat; /* без повторения */
     background-position: center;  /* по центру */
