--- a/index.html
+++ b/index.html
@@ -4,81 +4,9 @@
     <meta charset="UTF-8">
     <title>Каталог</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-  body {
-    margin: 0;    /* ЗАДНИЙ ФОН ЗА ТОВАРАМИ */
-    font-family: Arial, sans-serif;
-    background-image: url("SRMR-3.jpg"); /* ФОТКА */
-    background-size: cover;      /* растянуть на весь экран */
-    background-repeat: no-repeat; /* без повторения */
-    background-position: center;  /* по центру */
-    color: #333;
-}
-
-        header {
-            background: #000;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .catalog {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-        }
-
-        .item {
-            background: #fff;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-        }
-
-        .item img {
-            width: 100%;
-            height: 250px;
-            object-fit: cover;
-        }
-
-        .item-content {
-            padding: 15px;
-        }
-
-        .item-title {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        .item-price {
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        .item-button {
-            display: block;
-            text-align: center;
-            padding: 10px;
-            background: #FAC898;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            font-size: 14px;
-            color: #777;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
