--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="item-content">
                 <div class="item-title">Товар №2</div>
                 <div class="item-price">2 000 ₽</div>
-                <a href="https://instagram.com/youraccount" class="item-button">
+                <a href="https://instagram.com/freetour.kgkg" class="item-button">
                     Заказать
                 </a>
             </div>
