--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
 
         <!-- ТОВАР 2 -->
         <div class="item">
-            <img src="https://via.placeholder.com/400x400" alt="Товар 2">
+            <img src="818j6v9XLTL.jpg" alt="сумка на руль ">
             <div class="item-content">
-                <div class="item-title">Товар №2</div>
-                <div class="item-price">2 000 ₽</div>
-                <a href="https://instagram.com/freetour.kgkg" class="item-button">
+                <div class="item-title">Rhinowalk сумка под руль велосипеда
+
+Практичная и надёжная сумка для байкпакинга.
+Доступна в объёме 4 л и 8 л. Можно использовать отдельно или соединить вместе — получить до 12 л полезного пространства</div>
+                <div class="item-price">от 2000 сом</div>
+                <a href="https://instagram.com/freetour.kg" class="item-button">
                     Заказать
                 </a>
             </div>
@@ -45,7 +48,7 @@
 </div>
 
 <footer>
-    © 2026 Мой бренд
+    © 2026 freetour.kg
 </footer>
 
 </body>
