--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Каталог</title>
+    <title>Freetour</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -10,9 +10,15 @@
 <body>
 
 <header>
-    <h1>Freetour</h1>
-    <p>Всё для байкпакинга</p>
+    <div class="header-inner">
+        <img src="logo.png" alt="Freetour" class="logo">
+        <div class="header-text">
+            <h1>Freetour</h1>
+            <p>Всё для байкпакинга</p>
+        </div>
+    </div>
 </header>
+
 
 <div class="container">
     <div class="catalog">
@@ -21,7 +27,10 @@
         <div class="item">
             <img src="05_c33d7afc-b279-483c-8d2c-bdd36ae4d002.webp" alt="Товар 1">
             <div class="item-content">
-                <div class="item-title">Rhinowalk сумка на вилку</div>
+                <div class="item-title">Сумка Rhinowalk на вилку велосипеда
+
+Водонепроницаемая сумка для установки на вилку велосипеда — отличное решение для байкпакинга и длительных путешествий.
+Доступна в объёмах 4 л и 7 л, с надёжным креплением в комплекте. Простая установка и защита вещей от влаги и грязи делают её идеальным выбором для любых маршрутов.</div>
                 <div class="item-price">2500 сом</div>
                 <a href="https://instagram.com/freetour.kg" class="item-button">
                     Заказать
@@ -33,7 +42,7 @@
         <div class="item">
             <img src="818j6v9XLTL.jpg" alt="сумка на руль ">
             <div class="item-content">
-                <div class="item-title">Rhinowalk сумка под руль велосипеда
+                <div class="item-title">Сумка Rhinowalk под руль велосипеда
 
 Практичная и надёжная сумка для байкпакинга.
 Доступна в объёме 4 л и 8 л. Можно использовать отдельно или соединить вместе — получить до 12 л полезного пространства</div>
