--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <img src="photo_5217601386323843226_y.jpg" alt="Freetour" class="logo">
+    <img src="Picsart_26-02-12_18-29-18-194.png" alt="Freetour" class="logo">
     <div class="header-inner">
         <div class="header-text">
             <h1>Freetour</h1>
