--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 
 <body>
 
-<header>
-    <img src="Picsart_26-02-12_18-29-18-194.png" alt="Freetour" class="logo">
-    <div class="header-inner">
-        <div class="header-text">
-            <h1>Freetour</h1>
-            <p>Всё для байкпакинга</p>
-        </div>
+<header class="header-boxed">
+    <div class="logo-container">
+        <img src="Picsart_26-02-12_18-29-18-194.png" alt="Freetour" class="logo-big">
+    </div>
+    <div class="header-text">
+        <h1>Freetour</h1>
+        <p>Всё для байкпакинга</p>
     </div>
 </header>
+
 
 
 
