--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
                 </a>
             </div>
         </div>
+           <div class="item">
+            <img src="818j6v9XLTL.jpg" alt="Apidura fork">
+            <div class="item-content">
+                <div class="item-title">Сумка на вилку — Apidura Expedition 
+
+Apidura Expedition Fork Pack — премиальная сумка для байкпакинга, разработанная специально для установки на вилку через крепления на cargo cage (карго-клетку). Она изготовлена из лёгкого трёхслойного ламинированного материала, устойчивого к разрывам и истиранию, а все швы полностью герметичны, что обеспечивает водонепроницаемость даже в ненастье.</div>
+                <div class="item-price">от 9800 сом</div>
+                <a href="https://instagram.com/freetour.kg" class="item-button">
+                    Заказать
+                </a>
+            </div>
+        </div>
 
     </div>
 </div>
