--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
            <div class="item">
-            <img src="818j6v9XLTL.jpg" alt="Apidura fork">
+            <img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="Apidura fork">
             <div class="item-content">
                 <div class="item-title">Сумка на вилку — Apidura Expedition 
 
