--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header class="header-boxed">
     <div class="logo-container">
-        <img src="logo.png" alt="Freetour" class="logo-big">
+        <img src="Picsart_26-02-12_18-29-18-194.png" alt="Freetour" class="logo-big">
     </div>
     <div class="header-text">
         <h1>Freetour</h1>
