--- a/index.html
+++ b/index.html
@@ -64,17 +64,16 @@ Apidura Expedition Fork Pack — премиальная сумка для бай
                 </a>
             </div>
         </div>
-         <div class="item">
-            <img src="tb_image_share_1770908212687.png" alt="Apidura fork">
-            <div class="item-content">
-                <div class="item-title">Apidura Expedition Saddle Pack
-Водонепроницаемая подседельная сумка для велопоходов. Доступна на 9 л, 14 л и 17 л. Прочная, лёгкая, с надёжной системой крепления и рулонным закрытием для регулировки объёма. Идеальна для длительных путешествий.</div>
-                <div class="item-price">от 22000 сом</div>
-                <a href="https://instagram.com/freetour.kg" class="item-button">
-                    Заказать
-                </a>
-            </div>
+     <a href="apidurasaddle.html" class="item-link">
+    <div class="item">
+        <img src="tb_image_share_1770908212687.png" alt="">
+        <div class="item-content">
+            <div class="item-title">Apidura Saddle Pack</div>
+            <div class="item-price">от 22000 сом</div>
+            <div class="item-button">Подробнее</div>
         </div>
+    </div>
+</a>
 
     </div>
 </div>
