--- a/apidurasaddle.html
+++ b/apidurasaddle.html
@@ -71,8 +71,8 @@
 
         <!-- Галерея -->
         <div class="product-gallery">
-            <img src="photo1.jpg" alt="Apidura Saddle Pack">
-            <img src="photo2.jpg" alt="">
+            <img src="tb_image_share_1770908212687 (1).png" alt="Apidura Saddle Pack">
+            <img src="apidura-expedition-saddle-pack-9l-capacity-guide-kitgrid.jpg" alt="вместимость">
             <img src="photo3.jpg" alt="">
         </div>
 
