--- a/apidurasaddle.html
+++ b/apidurasaddle.html
@@ -1,112 +1,227 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Apidura Expedition Saddle Pack</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Название товара</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
+<style>
+/* ===== Основной контейнер страницы товара ===== */
+.product-page {
+    max-width: 1100px;
+    margin: 40px auto;
+    padding: 30px;
+    background: rgba(255, 255, 255, 1); /* Белый фон */
+    border-radius: 15px;
+}
 
-    <style>
-        .product-page {
-            max-width: 1100px;
-            margin: 40px auto;
-            padding: 20px;
-            background: rgba(20, 60, 40, 0.6);
-            border-radius: 15px;
-        }
+/* ===== Сетка: галерея + информация ===== */
+.product-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+}
 
-        .product-wrapper {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 40px;
-        }
+/* ===== Блок галереи ===== */
+.product-gallery {
+    position: relative;
+}
 
-        .product-gallery img {
-            width: 100%;
-            border-radius: 10px;
-            margin-bottom: 15px;
-        }
+.main-image {
+    width: 100%;
+    border-radius: 10px;
+}
 
-        .product-title {
-            font-size: 32px;
-            margin-bottom: 15px;
-        }
+/* Кнопки навигации */
+.nav-btn {
+    position: absolute;
+    top: 45%;
+    transform: translateY(-50%);
+    background: rgba(0,0,0,0.5);
+    color: white;
+    border: none;
+    font-size: 24px;
+    padding: 8px 14px;
+    cursor: pointer;
+    border-radius: 6px;
+}
 
-        .product-price {
-            font-size: 22px;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
+.prev { left: 10px; }
+.next { right: 10px; }
 
-        .product-description {
-            line-height: 1.6;
-            margin-bottom: 25px;
-        }
+.nav-btn:hover {
+    background: rgba(0,0,0,0.8);
+}
 
-        .back-link {
-            display: inline-block;
-            margin-top: 30px;
-            text-decoration: none;
-            color: #fff;
-            opacity: 0.8;
-        }
+/* Миниатюры */
+.thumbnails {
+    display: flex;
+    gap: 10px;
+    margin-top: 15px;
+}
 
-        .back-link:hover {
-            opacity: 1;
-        }
+.thumbnails img {
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+    cursor: pointer;
+    border-radius: 6px;
+    opacity: 0.6;
+    transition: 0.3s;
+}
 
-        @media (max-width: 900px) {
-            .product-wrapper {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+.thumbnails img.active,
+.thumbnails img:hover {
+    opacity: 1;
+    border: 2px solid orange;
+}
+
+/* ===== Информация о товаре ===== */
+.product-title {
+    font-size: 32px;
+    margin-bottom: 15px;
+}
+
+.product-price {
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.product-description {
+    line-height: 1.6;
+    margin-bottom: 25px;
+}
+
+/* Кнопка заказа */
+.item-button {
+    display: inline-block;
+    padding: 12px 20px;
+    background: orange;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+.item-button:hover {
+    background: darkorange;
+}
+
+/* Ссылка назад */
+.back-link {
+    display: inline-block;
+    margin-top: 30px;
+    text-decoration: none;
+    color: black;
+    opacity: 0.7;
+}
+
+.back-link:hover {
+    opacity: 1;
+}
+
+/* ===== Адаптив ===== */
+@media (max-width: 900px) {
+    .product-wrapper {
+        grid-template-columns: 1fr;
+    }
+}
+</style>
 </head>
 
 <body>
 
+<!-- ===== Страница товара ===== -->
 <div class="product-page">
+
     <div class="product-wrapper">
 
-        <!-- Галерея -->
+        <!-- ===== Галерея с листанием ===== -->
         <div class="product-gallery">
-            <img src="tb_image_share_1770908212687 (1).png" alt="Apidura Saddle Pack">
-            <img src="apidura-expedition-saddle-pack-9l-capacity-guide-kitgrid.jpg" alt="вместимость">
-            <img src="photo3.jpg" alt="">
+
+            <!-- Главное изображение -->
+            <img id="mainImage" class="main-image"
+                 src="photo1.jpg"
+                 alt="Название товара">
+
+            <!-- Кнопки переключения -->
+            <button class="nav-btn prev">&#10094;</button>
+            <button class="nav-btn next">&#10095;</button>
+
+            <!-- Миниатюры -->
+            <div class="thumbnails">
+                <img src="photo1.jpg" class="thumb active">
+                <img src="photo2.jpg" class="thumb">
+                <img src="photo3.jpg" class="thumb">
+            </div>
+
         </div>
 
-        <!-- Информация -->
+        <!-- ===== Информация о товаре ===== -->
         <div>
+
+            <!-- Название -->
             <h1 class="product-title">
-                Apidura Expedition Saddle Pack
+                Название товара
             </h1>
 
+            <!-- Цена -->
             <div class="product-price">
                 Цена по запросу
             </div>
 
+            <!-- Описание -->
             <div class="product-description">
-                Водонепроницаемая подседельная сумка для длительных велопоходов.
-                Доступна в объёмах 9л, 14л и 17л.
-                Изготовлена из прочного ламинированного материала с герметичными швами.
-                Надёжная система крепления минимизирует раскачивание.
-                Идеальный выбор для байкпакинга и экспедиций.
+                Здесь описание товара. Меняется для каждого товара.
             </div>
 
+            <!-- Кнопка заказа -->
             <a href="https://instagram.com/freetour.kg" class="item-button">
                 Заказать
             </a>
 
             <br>
 
+            <!-- Ссылка назад в каталог -->
             <a href="index.html" class="back-link">
                 ← Вернуться в каталог
             </a>
+
         </div>
 
     </div>
 </div>
+
+<!-- ===== JS для листания фото ===== -->
+<script>
+const mainImage = document.getElementById("mainImage");
+const thumbs = document.querySelectorAll(".thumb");
+const prev = document.querySelector(".prev");
+const next = document.querySelector(".next");
+
+let currentIndex = 0;
+
+function updateImage(index) {
+    currentIndex = index;
+    mainImage.src = thumbs[index].src;
+    thumbs.forEach(t => t.classList.remove("active"));
+    thumbs[index].classList.add("active");
+}
+
+thumbs.forEach((thumb, index) => {
+    thumb.addEventListener("click", () => updateImage(index));
+});
+
+prev.addEventListener("click", () => {
+    currentIndex = (currentIndex - 1 + thumbs.length) % thumbs.length;
+    updateImage(currentIndex);
+});
+
+next.addEventListener("click", () => {
+    currentIndex = (currentIndex + 1) % thumbs.length;
+    updateImage(currentIndex);
+});
+</script>
 
 </body>
 </html>
