--- a/apidurasaddle.html
+++ b/apidurasaddle.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Название товара</title>
+<title>Apidura подседельная сумка</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -141,8 +141,8 @@
 
             <!-- Главное изображение -->
             <img id="mainImage" class="main-image"
-                 src="photo1.jpg"
-                 alt="Название товара">
+                 src="tb_image_share_1770908212687.png"
+                 alt="антон коллегин">
 
             <!-- Кнопки переключения -->
             <button class="nav-btn prev">&#10094;</button>
@@ -150,9 +150,9 @@
 
             <!-- Миниатюры -->
             <div class="thumbnails">
-                <img src="photo1.jpg" class="thumb active">
-                <img src="photo2.jpg" class="thumb">
-                <img src="photo3.jpg" class="thumb">
+                <img src="apidura-expedition-saddle-pack-9l-capacity-guide-kitgrid.jpg" class="thumb active">
+                <img src="apidura-expedition-saddle-pack-9l-capacity-guide-kitgrid.jpg" class="thumb">
+                <img src="apidura-saddle-pack-dry_main.jpg" class="thumb">
             </div>
 
         </div>
@@ -162,7 +162,7 @@
 
             <!-- Название -->
             <h1 class="product-title">
-                Название товара
+                Apidura saddle pack
             </h1>
 
             <!-- Цена -->
@@ -172,7 +172,7 @@
 
             <!-- Описание -->
             <div class="product-description">
-                Здесь описание товара. Меняется для каждого товара.
+                Apidura Expedition Saddle Pack — водонепроницаемая и сверхпрочная подседельная сумка для длительных велопоходов и экспедиций. Она сделана из лёгкого многослойного ламинированного материала с RF‑сварными швами и надёжно крепится под седлом без багажника. Съёмная трёхточечная анти‑свай система удерживает сумку жёстко в любых условиях. Объём регулируется системой roll‑top, а внешние крепления дают дополнитель место для снаряжения. Доступна в трёх объёмах — 9 л, 14 л и 17 л, чтобы подобрать нужный размер под разные путешествия. Apidura — проверенный выбор для самых больших гонок и приключений, где надёжность и защита снаряжения критичны
             </div>
 
             <!-- Кнопка заказа -->
