--- a/apidurasaddle.html
+++ b/apidurasaddle.html
@@ -150,8 +150,9 @@
 
             <!-- Миниатюры -->
             <div class="thumbnails">
-                <img src="apidura-expedition-saddle-pack-9l-capacity-guide-kitgrid.jpg" class="thumb active">
+                <img src="tb_image_share_1770908212687 (2).png" class="thumb active"
                 <img src="apidura-expedition-saddle-pack-9l-capacity-guide-kitgrid.jpg" class="thumb">
+                <img src="apidura-expedition-saddle-pack-17l-kit-grid_1024x1024.webp" class="thumb">
                 <img src="apidura-saddle-pack-dry_main.jpg" class="thumb">
             </div>
 
