--- a/apidurasaddle.html
+++ b/apidurasaddle.html
@@ -168,7 +168,7 @@
 
             <!-- Цена -->
             <div class="product-price">
-                Цена по запросу
+                Цена от 22000 сом
             </div>
 
             <!-- Описание -->
