--- a/apidurafork.html
+++ b/apidurafork.html
@@ -1,1 +1,227 @@
+<!DOCTYPE html> /* ЭТО КОД СТРАНИЦЫ ДЛЯ ТОВАРА С ЖС АНИМАЦИЕЙ НА ПЕРЕЛЛИСТЫВАНИЕ */
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<title>Apidura fork pack</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<style>
+/* ===== Основной контейнер страницы товара ===== */
+.product-page {
+    max-width: 1100px;
+    margin: 40px auto;
+    padding: 30px;
+    background: rgba(255, 255, 255, 1); /* Белый фон */
+    border-radius: 15px;
+}
+
+/* ===== Сетка: галерея + информация ===== */
+.product-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+}
+
+/* ===== Блок галереи ===== */
+.product-gallery {
+    position: relative;
+}
+
+.main-image {
+    width: 100%;
+    border-radius: 10px;
+}
+
+/* Кнопки навигации */
+.nav-btn {
+    position: absolute;
+    top: 45%;
+    transform: translateY(-50%);
+    background: rgba(0,0,0,0.5);
+    color: white;
+    border: none;
+    font-size: 24px;
+    padding: 8px 14px;
+    cursor: pointer;
+    border-radius: 6px;
+}
+
+.prev { left: 10px; }
+.next { right: 10px; }
+
+.nav-btn:hover {
+    background: rgba(0,0,0,0.8);
+}
+
+/* Миниатюры */
+.thumbnails {
+    display: flex;
+    gap: 10px;
+    margin-top: 15px;
+}
+
+.thumbnails img {
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+    cursor: pointer;
+    border-radius: 6px;
+    opacity: 0.6;
+    transition: 0.3s;
+}
+
+.thumbnails img.active,
+.thumbnails img:hover {
+    opacity: 1;
+    border: 2px solid orange;
+}
+
+/* ===== Информация о товаре ===== */
+.product-title {
+    font-size: 32px;
+    margin-bottom: 15px;
+}
+
+.product-price {
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.product-description {
+    line-height: 1.6;
+    margin-bottom: 25px;
+}
+
+/* Кнопка заказа */
+.item-button {
+    display: inline-block;
+    padding: 12px 20px;
+    background: orange;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+.item-button:hover {
+    background: darkorange;
+}
+
+/* Ссылка назад */
+.back-link {
+    display: inline-block;
+    margin-top: 30px;
+    text-decoration: none;
+    color: black;
+    opacity: 0.7;
+}
+
+.back-link:hover {
+    opacity: 1;
+}
+
+/* ===== Адаптив ===== */
+@media (max-width: 900px) {
+    .product-wrapper {
+        grid-template-columns: 1fr;
+    }
+}
+</style>
+</head>
+
+<body>
+
+<!-- ===== Страница товара ===== -->
+<div class="product-page">
+
+    <div class="product-wrapper">
+
+        <!-- ===== Галерея с листанием ===== -->
+        <div class="product-gallery">
+
+            <!-- Главное изображение -->
+            <img id="mainImage" class="main-image"
+                 src="apidura-apidura-expedition-fork-pack-3l.jpg"
+                 alt="Apidura fork pack">
+
+            <!-- Кнопки переключения -->
+            <button class="nav-btn prev">&#10094;</button>
+            <button class="nav-btn next">&#10095;</button>
+
+            <!-- Миниатюры -->
+            <div class="thumbnails">
+                <img src="Apidura-Expedition-Fork-Pack-Review-13.jpg" class="thumb active">
+                <img src="Apidura-Expedition-Fork-Pack-Review-Share.jpg" class="thumb">
+                <img src="photo3.jpg" class="thumb">
+            </div>
+
+        </div>
+
+        <!-- ===== Информация о товаре ===== -->
+        <div>
+
+            <!-- Название -->
+            <h1 class="product-title">
+                Apidura fork pack
+            </h1>
+
+            <!-- Цена -->
+            <div class="product-price">
+                Цена от 9800 сом
+            </div>
+
+            <!-- Описание -->
+            <div class="product-description">
+                Apidura Expedition Fork Pack — премиальная сумка для байкпакинга, часть серии Expedition, разработанная для установки на вилку через крепления на cargo cage. Изготовлена из лёгкого трёхслойного ламинированного материала, устойчивого к разрывам и истиранию, с полностью герметичными швами для полной водонепроницаемости в любых условиях. Доступна в объёмах 3 л и 4 л, идеальна для длительных велопоходов и экспедиций, где важны лёгкость и надёжность.
+            </div>
+
+            <!-- Кнопка заказа -->
+            <a href="https://instagram.com/freetour.kg" class="item-button">
+                Заказать
+            </a>
+
+            <br>
+
+            <!-- Ссылка назад в каталог -->
+            <a href="index.html" class="back-link">
+                ← Вернуться в каталог
+            </a>
+
+        </div>
+
+    </div>
+</div>
+
+<!-- ===== JS для листания фото ===== -->
+<script>
+const mainImage = document.getElementById("mainImage");
+const thumbs = document.querySelectorAll(".thumb");
+const prev = document.querySelector(".prev");
+const next = document.querySelector(".next");
+
+let currentIndex = 0;
+
+function updateImage(index) {
+    currentIndex = index;
+    mainImage.src = thumbs[index].src;
+    thumbs.forEach(t => t.classList.remove("active"));
+    thumbs[index].classList.add("active");
+}
+
+thumbs.forEach((thumb, index) => {
+    thumb.addEventListener("click", () => updateImage(index));
+});
+
+prev.addEventListener("click", () => {
+    currentIndex = (currentIndex - 1 + thumbs.length) % thumbs.length;
+    updateImage(currentIndex);
+});
+
+next.addEventListener("click", () => {
+    currentIndex = (currentIndex + 1) % thumbs.length;
+    updateImage(currentIndex);
+});
+</script>
+
+</body>
+</html>
