--- a/index.html
+++ b/index.html
@@ -52,18 +52,21 @@
                 </a>
             </div>
         </div>
-           <div class="item">
-            <img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="Apidura fork">
-            <div class="item-content">
-                <div class="item-title">Сумка на вилку — Apidura Expedition 
+       <div class="item">
+    <!-- Картинка товара -->
+    <img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="Apidura Fork Pack">
 
-Apidura Expedition Fork Pack — премиальная сумка для байкпакинга, разработанная специально для установки на вилку через крепления на cargo cage (карго-клетку). Она изготовлена из лёгкого трёхслойного ламинированного материала, устойчивого к разрывам и истиранию, а все швы полностью герметичны, что обеспечивает водонепроницаемость даже в ненастье.</div>
-                <div class="item-price">от 9800 сом</div>
-                <a href="https://instagram.com/freetour.kg" class="item-button">
-                    Заказать
-                </a>
-            </div>
-        </div>
+    <div class="item-content">
+        <!-- Цена товара -->
+        <div class="item-price">от 9800 сом</div>
+
+        <!-- Кнопка "Подробнее", ведёт на отдельный HTML-файл -->
+        <a href="apidurafork.html" class="item-button">
+            Подробнее
+        </a>
+    </div>
+</div>
+
      <a href="apidurasaddle.html" class="item-link">
     <div class="item">
         <img src="tb_image_share_1770908212687.png" alt="">
