--- a/index.html
+++ b/index.html
@@ -52,32 +52,16 @@
                 </a>
             </div>
         </div>
-      <div class="item" style="width: 220px; border: 1px solid #ddd; border-radius: 10px; overflow: hidden; text-align: center; font-family: sans-serif;">
-
-    <!-- Картинка товара -->
-    <img src="apidura-apidura-expedition-fork-pack-3l.jpg" 
-         alt="Apidura Fork Pack" 
-         style="width: 100%; display: block;">
-
-    <!-- Контент карточки -->
-    <div class="item-content" style="padding: 10px; display: flex; flex-direction: column; gap: 6px;">
-
-        <!-- Название товара -->
-        <div class="item-title" style="font-weight: bold; font-size: 14px;">
-            Apidura Expedition Fork Pack
+       <a href="apidurafork.html" class="item-link">
+    <div class="item">
+        <img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="">
+        <div class="item-content">
+            <div class="item-title">Apidura fork Pack</div>
+            <div class="item-price">от 9800 сом</div>
+            <div class="item-button">Подробнее</div>
         </div>
-
-        <!-- Цена -->
-        <div class="item-price" style="color: #ff6600; font-weight: bold; font-size: 13px;">
-            от 9800 сом
-        </div>
-
-        <!-- Кнопка "Подробнее" -->
-        <a href="apidurafork.html" 
-           class="item-button" 
-           style="margin-top: auto; display: block; background: orange; color: #fff; text-decoration: none; padding: 8px 0; border-radius: 6px; font-size: 13px;">
-            Подробнее
-        </a>
+    </div>
+</a>
 
     </div>
 </div>
