--- a/index.html
+++ b/index.html
@@ -18,65 +18,48 @@
     </div>
 </header>
 
-
-
 <div class="container">
     <div class="catalog">
 
-        <!-- ТОВАР 1 -->
+        <!-- Сумка Rhinowalk на вилку -->
         <div class="item">
-            <img src="05_c33d7afc-b279-483c-8d2c-bdd36ae4d002.webp" alt="Товар 1">
+            <img src="05_c33d7afc-b279-483c-8d2c-bdd36ae4d002.webp" alt="Сумка Rhinowalk на вилку">
             <div class="item-content">
-                <div class="item-title">Сумка Rhinowalk на вилку велосипеда
-
-Водонепроницаемая сумка для установки на вилку велосипеда — отличное решение для байкпакинга и длительных путешествий.
-Доступна в объёмах 4 л и 7 л, с надёжным креплением в комплекте. Простая установка и защита вещей от влаги и грязи делают её идеальным выбором для любых маршрутов.</div>
+                <div class="item-title">Сумка Rhinowalk на вилку</div>
                 <div class="item-price">2500 сом</div>
-                <a href="https://instagram.com/freetour.kg" class="item-button">
-                    Заказать
-                </a>
+                <a href="rhinowalkfork.html" class="item-button">Подробнее</a>
             </div>
         </div>
 
-        <!-- ТОВАР 2 -->
+        <!-- Сумка Rhinowalk под руль -->
         <div class="item">
-            <img src="818j6v9XLTL.jpg" alt="сумка на руль ">
+            <img src="818j6v9XLTL.jpg" alt="Сумка Rhinowalk под руль">
             <div class="item-content">
-                <div class="item-title">Сумка Rhinowalk под руль велосипеда
-
-Практичная и надёжная сумка для байкпакинга.
-Доступна в объёме 4 л и 8 л. Можно использовать отдельно или соединить вместе — получить до 12 л полезного пространства</div>
+                <div class="item-title">Сумка Rhinowalk под руль</div>
                 <div class="item-price">от 2000 сом</div>
-                <a href="https://instagram.com/freetour.kg" class="item-button">
-                    Заказать
-                </a>
+                <a href="rhinowalkhandlebar.html" class="item-button">Подробнее</a>
             </div>
         </div>
-       <a href="apidurafork.html" class="item-link">
-    <div class="item">
-        <img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="">
-        <div class="item-content">
-            <div class="item-title">Apidura fork Pack</div>
-            <div class="item-price">от 9800 сом</div>
-            <div class="item-button">Подробнее</div>
+
+        <!-- Apidura Fork Pack -->
+        <div class="item">
+            <img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="Apidura Fork Pack">
+            <div class="item-content">
+                <div class="item-title">Apidura Fork Pack</div>
+                <div class="item-price">от 9800 сом</div>
+                <a href="apidurafork.html" class="item-button">Подробнее</a>
+            </div>
         </div>
-    </div>
-</a>
 
-    </div>
-</div>
-
-
-     <a href="apidurasaddle.html" class="item-link">
-    <div class="item">
-        <img src="tb_image_share_1770908212687.png" alt="">
-        <div class="item-content">
-            <div class="item-title">Apidura Saddle Pack</div>
-            <div class="item-price">от 22000 сом</div>
-            <div class="item-button">Подробнее</div>
+        <!-- Apidura Saddle Pack -->
+        <div class="item">
+            <img src="tb_image_share_1770908212687.png" alt="Apidura Saddle Pack">
+            <div class="item-content">
+                <div class="item-title">Apidura Saddle Pack</div>
+                <div class="item-price">от 22000 сом</div>
+                <a href="apidurasaddle.html" class="item-button">Подробнее</a>
+            </div>
         </div>
-    </div>
-</a>
 
     </div>
 </div>
@@ -87,3 +70,4 @@
 
 </body>
 </html>
+
