--- a/apidurafork.html
+++ b/apidurafork.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> /* ЭТО КОД СТРАНИЦЫ ДЛЯ ТОВАРА С ЖС АНИМАЦИЕЙ НА ПЕРЕЛЛИСТЫВАНИЕ */
+<!DOCTYPE html> 
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
