--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Freetour</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-
 <body>
+
 <header class="header-boxed">
-    <div class="logo-container">
-        <img src="Picsart_26-02-12_18-29-18-194.png" alt="Freetour" class="logo-big">
+
+    <div class="header-left">
+        <div class="logo-container">
+            <img src="Picsart_26-02-12_18-29-18-194.png" alt="Freetour" class="logo-big">
+        </div>
+        <div class="header-text">
+            <h1>Freetour</h1>
+            <p>Всё для байкпакинга</p>
+        </div>
     </div>
-    <div class="header-text">
-        <h1>Freetour</h1>
-        <p>Всё для байкпакинга</p>
-    </div>
+
+    <nav class="nav">
+        <a href="index.html">Главная</a>
+        <a href="about.html">О нас</a>
+        <a href="contacts.html" class="nav-btn">Контакты</a>
+    </nav>
+
 </header>
+
 
 <div class="container">
     <div class="catalog">
