--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Freetour — Всё для байкпакинга</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Freetour — магазин снаряжения для байкпакинга и велопутешествий в Кыргызстане.">
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
 
 <header class="header-boxed">
 
     <div class="header-left">
         <div class="logo-container">
-            <img src="Picsart_26-02-12_18-29-18-194.png" alt="Freetour" class="logo-big">
+            <img src="Picsart_26-02-12_18-29-18-194.png" alt="Логотип Freetour" class="logo-big">
         </div>
         <div class="header-text">
             <h1>Freetour</h1>
@@ -20,57 +30,59 @@
 
 </header>
 
+<main class="container">
 
-<div class="container">
-    <div class="catalog">
+    <section class="catalog">
 
-        <!-- Сумка Rhinowalk на вилку -->
-        <div class="item">
+        <!-- Rhinowalk Fork Bag -->
+        <article class="item">
             <img src="05_c33d7afc-b279-483c-8d2c-bdd36ae4d002.webp" alt="Сумка Rhinowalk на вилку">
             <div class="item-content">
-                <div class="item-title">Сумка Rhinowalk на вилку</div>
+                <h2 class="item-title">Сумка Rhinowalk на вилку</h2>
                 <div class="item-price">2500 сом</div>
                 <a href="rhinowalkfork.html" class="item-button">Подробнее</a>
             </div>
-        </div>
+        </article>
 
-        <!-- Сумка Rhinowalk под руль -->
-        <div class="item">
+        <!-- Rhinowalk Handlebar Bag -->
+        <article class="item">
             <img src="818j6v9XLTL.jpg" alt="Сумка Rhinowalk под руль">
             <div class="item-content">
-                <div class="item-title">Сумка Rhinowalk под руль</div>
+                <h2 class="item-title">Сумка Rhinowalk под руль</h2>
                 <div class="item-price">от 2000 сом</div>
                 <a href="rhinowalkhandlebar.html" class="item-button">Подробнее</a>
             </div>
-        </div>
+        </article>
 
         <!-- Apidura Fork Pack -->
-        <div class="item">
-            <img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="Apidura Fork Pack">
+        <article class="item">
+            <img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="Apidura Fork Pack 3L">
             <div class="item-content">
-                <div class="item-title">Apidura Fork Pack</div>
+                <h2 class="item-title">Apidura Fork Pack</h2>
                 <div class="item-price">от 9800 сом</div>
                 <a href="apidurafork.html" class="item-button">Подробнее</a>
             </div>
-        </div>
+        </article>
 
         <!-- Apidura Saddle Pack -->
-        <div class="item">
+        <article class="item">
             <img src="tb_image_share_1770908212687.png" alt="Apidura Saddle Pack">
             <div class="item-content">
-                <div class="item-title">Apidura Saddle Pack</div>
+                <h2 class="item-title">Apidura Saddle Pack</h2>
                 <div class="item-price">от 22000 сом</div>
                 <a href="apidurasaddle.html" class="item-button">Подробнее</a>
             </div>
-        </div>
+        </article>
 
-    </div>
-</div>
+    </section>
+
+</main>
 
 <footer>
-    © 2026 freetour.kg
+    © 2026 Freetour.kg — Всё для байкпакинга
 </footer>
 
 </body>
 </html>
+
 
