--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="nav">
         <a href="index.html">Главная</a>
         <a href="about.html">О нас</a>
-        <a href="contacts.html" class="nav-btn">Контакты</a>
+        <a href="contacts.html">Контакты</a>
     </nav>
 
 </header>
