--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <nav class="nav">
         <a href="index.html">Главная</a>
-        <a href="about.html">О нас</a>
+        <a href="onas.html">О нас</a>
         <a href="contacts.html">Контакты</a>
     </nav>
 
