--- a/onas.html
+++ b/onas.html
@@ -41,9 +41,11 @@
 
         <!-- Блок с фотографиями -->
         <div class="about-photos">
-            <div class="photo-placeholder">Фото 1</div>
-            <div class="photo-placeholder">Фото 2</div>
-            <div class="photo-placeholder">Фото 3</div>
+           <img src="IMG_20260213_163050_692.jpg" alt="Велопоход Freetour">
+            <img src="IMG_20260213_161804_656.jpg" alt="Велопоход Freetour">
+            <img src="photo_5222159965827568681_y (1).jpg" alt="Велопоход Freetour">
+
+
         </div>
 
         <!-- Блок с текстом -->
