--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 
     <div class="header-left">
         <div class="logo-container">
-            <img src="Picsart_26-02-12_18-29-18-194.png" alt="Логотип Freetour" class="logo-big">
+            <a href="index.html">
+                <img src="Picsart_26-02-12_18-29-18-194.png" alt="Логотип Freetour" class="logo-big">
+            </a>
         </div>
+
         <div class="header-text">
             <h1>Freetour</h1>
             <p>Всё для байкпакинга</p>
@@ -25,16 +28,17 @@
     <nav class="nav">
         <a href="index.html">Главная</a>
         <a href="onas.html">О нас</a>
-        <a href="contacts.html">Контакты</a>
+        <a href="contacts.html" class="nav-btn">Контакты</a>
     </nav>
 
 </header>
+
 
 <main class="container">
 
     <section class="catalog">
 
-        <!-- Rhinowalk Fork Bag -->
+        <!-- Rhinowalk Fork -->
         <article class="item">
             <img src="05_c33d7afc-b279-483c-8d2c-bdd36ae4d002.webp" alt="Сумка Rhinowalk на вилку">
             <div class="item-content">
@@ -44,7 +48,7 @@
             </div>
         </article>
 
-        <!-- Rhinowalk Handlebar Bag -->
+        <!-- Rhinowalk Handlebar -->
         <article class="item">
             <img src="818j6v9XLTL.jpg" alt="Сумка Rhinowalk под руль">
             <div class="item-content">
@@ -54,9 +58,9 @@
             </div>
         </article>
 
-        <!-- Apidura Fork Pack -->
+        <!-- Apidura Fork -->
         <article class="item">
-            <img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="Apidura Fork Pack 3L">
+            <img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="Apidura Fork Pack">
             <div class="item-content">
                 <h2 class="item-title">Apidura Fork Pack</h2>
                 <div class="item-price">от 9800 сом</div>
@@ -64,7 +68,7 @@
             </div>
         </article>
 
-        <!-- Apidura Saddle Pack -->
+        <!-- Apidura Saddle -->
         <article class="item">
             <img src="tb_image_share_1770908212687.png" alt="Apidura Saddle Pack">
             <div class="item-content">
@@ -77,6 +81,7 @@
     </section>
 
 </main>
+
 
 <footer>
     © 2026 Freetour.kg 
