--- a/onas.html
+++ b/onas.html
@@ -26,12 +26,11 @@
 
     <nav class="nav">
         <a href="index.html">Главная</a>
-        <a href="about.html">О нас</a>
+        <a href="onas.html" class="nav-btn-active">О нас</a>
         <a href="contacts.html" class="nav-btn">Контакты</a>
     </nav>
 
 </header>
-
 
 <main class="about-wrapper">
 
@@ -39,28 +38,24 @@
 
         <h2 class="about-title">О нас</h2>
 
-        <!-- Блок с фотографиями -->
+        <!-- Галерея фотографий -->
         <div class="about-photos">
-           <img src="IMG_20260213_163050_692.jpg" alt="Велопоход Freetour">
-            <img src="IMG_20260213_161804_656.jpg" alt="Велопоход Freetour">
-            <img src="photo_5222159965827568681_y (1).jpg" alt="Велопоход Freetour">
-
-
+            <img src="IMG_20260213_163050_692.jpg" alt="Велопоход Freetour" class="about-img">
+            <img src="IMG_20260213_161804_656.jpg" alt="Велопоход Freetour" class="about-img">
+            <img src="photo_5222159965827568681_y (1).jpg" alt="Велопоход Freetour" class="about-img">
         </div>
 
-        <!-- Блок с текстом -->
+        <!-- Текст о компании -->
         <div class="about-text">
             <p>
                 Freetour — это проект для тех, кто выбирает свободу дороги,
                 дальние маршруты и настоящие велоприключения.
             </p>
-
             <p>
                 Мы подбираем и тестируем снаряжение для байкпакинга,
                 чтобы каждая поездка была комфортной, надёжной
                 и продуманной до мелочей.
             </p>
-
             <p>
                 Наша цель — сделать качественное велооборудование
                 доступным для путешественников в Кыргызстане.
@@ -71,10 +66,10 @@
 
 </main>
 
-
 <footer>
-    © 2026 Freetour.kg 
+    © 2026 Freetour.kg — Всё для байкпакинга
 </footer>
 
 </body>
 </html>
+
