--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <style>
+    body {
+      cursor: url("cursor.png") 16 16, auto;
+    }
+  </style>
+
     <meta charset="UTF-8">
     <title>Freetour — Всё для байкпакинга</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
