--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     body {
-      cursor: url("cursor.png") 16 16, auto;
+      cursor: url("Picsart_26-02-12_18-29-18-194.png") 16 16, auto;
     }
   </style>
 
