--- a/contacts.html
+++ b/contacts.html
@@ -161,6 +161,7 @@ border:none;
 <div class="logo">Freetour</div>
 <nav class="nav">
 <a href="index.html">Главная</a>
+  <a href="onas.html">О нас</a>
 <a href="#" class="active">Контакты</a>
 </nav>
 </header>
