--- a/index.html
+++ b/index.html
@@ -1,93 +1,173 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-     <meta charset="UTF-8">
-    <title>Freetour — Всё для байкпакинга</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Freetour — магазин снаряжения для байкпакинга и велопутешествий в Кыргызстане.">
-    <link rel="stylesheet" href="style.css">
-</head>
+<meta charset="UTF-8">
+<title>Freetour — Всё для байкпакинга</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Freetour — магазин снаряжения для байкпакинга и велопутешествий в Кыргызстане.">
 
+<link rel="stylesheet" href="style.css">
+
+<style>
+/* 🔥 Доп анимация карточек */
+.item {
+    transition: 0.4s;
+}
+.item:hover {
+    transform: translateY(-8px);
+}
+
+/* 🛒 Корзина */
+.cart-btn {
+    background: #ff6a00;
+    color: white;
+    padding: 8px 14px;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-left: 15px;
+    border: none;
+}
+
+.cart-count {
+    background: black;
+    padding: 2px 6px;
+    border-radius: 50%;
+    font-size: 12px;
+    margin-left: 5px;
+}
+</style>
+
+</head>
 <body>
 
 <header class="header-boxed">
 
-    <div class="header-left">
-        <div class="logo-container">
-            <a href="index.html">
-                <img src="Picsart_26-02-12_18-29-18-194.png" alt="Логотип Freetour" class="logo-big">
-            </a>
-        </div>
-
-        <div class="header-text">
-            <h1>Freetour</h1>
-            <p>Всё для байкпакинга</p>
-        </div>
+<div class="header-left">
+    <div class="logo-container">
+        <a href="index.html">
+            <img src="Picsart_26-02-12_18-29-18-194.png" alt="Логотип Freetour" class="logo-big">
+        </a>
     </div>
 
-    <nav class="nav">
-        <a href="index.html">Главная</a>
-        <a href="onas.html">О нас</a>
-        <a href="contacts.html" class="nav-btn">Контакты</a>
-    </nav>
+    <div class="header-text">
+        <h1>Freetour</h1>
+        <p>Всё для байкпакинга</p>
+    </div>
+</div>
+
+<nav class="nav">
+    <a href="index.html">Главная</a>
+    <a href="onas.html">О нас</a>
+    <a href="contacts.html" class="nav-btn">Контакты</a>
+
+    <button id="themeToggle" class="cart-btn">🌙</button>
+    <button class="cart-btn" onclick="showCart()">
+        🛒 <span id="cartCount" class="cart-count">0</span>
+    </button>
+</nav>
 
 </header>
 
-
 <main class="container">
 
-    <section class="catalog">
+<section class="catalog">
 
-        <!-- Rhinowalk Fork -->
-        <article class="item">
-            <img src="05_c33d7afc-b279-483c-8d2c-bdd36ae4d002.webp" alt="Сумка Rhinowalk на вилку">
-            <div class="item-content">
-                <h2 class="item-title">Сумка Rhinowalk на вилку</h2>
-                <div class="item-price">2500 сом</div>
-                <a href="rhinowalkfork.html" class="item-button">Подробнее</a>
-            </div>
-        </article>
+<!-- Rhinowalk Fork -->
+<article class="item">
+<img src="05_c33d7afc-b279-483c-8d2c-bdd36ae4d002.webp" alt="Сумка Rhinowalk на вилку">
+<div class="item-content">
+<h2 class="item-title">Сумка Rhinowalk на вилку</h2>
+<div class="item-price">2500 сом</div>
+<button class="item-button" onclick="addToCart('Rhinowalk Fork', 2500)">В корзину</button>
+<a href="rhinowalkfork.html" class="item-button">Подробнее</a>
+</div>
+</article>
 
-        <!-- Rhinowalk Handlebar -->
-        <article class="item">
-            <img src="818j6v9XLTL.jpg" alt="Сумка Rhinowalk под руль">
-            <div class="item-content">
-                <h2 class="item-title">Сумка Rhinowalk под руль</h2>
-                <div class="item-price">от 2000 сом</div>
-                <a href="rhinowalkhandlebar.html" class="item-button">Подробнее</a>
-            </div>
-        </article>
+<!-- Rhinowalk Handlebar -->
+<article class="item">
+<img src="818j6v9XLTL.jpg" alt="Сумка Rhinowalk под руль">
+<div class="item-content">
+<h2 class="item-title">Сумка Rhinowalk под руль</h2>
+<div class="item-price">от 2000 сом</div>
+<button class="item-button" onclick="addToCart('Rhinowalk Handlebar', 2000)">В корзину</button>
+<a href="rhinowalkhandlebar.html" class="item-button">Подробнее</a>
+</div>
+</article>
 
-        <!-- Apidura Fork -->
-        <article class="item">
-            <img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="Apidura Fork Pack">
-            <div class="item-content">
-                <h2 class="item-title">Apidura Fork Pack</h2>
-                <div class="item-price">от 9800 сом</div>
-                <a href="apidurafork.html" class="item-button">Подробнее</a>
-            </div>
-        </article>
+<!-- Apidura Fork -->
+<article class="item">
+<img src="apidura-apidura-expedition-fork-pack-3l.jpg" alt="Apidura Fork Pack">
+<div class="item-content">
+<h2 class="item-title">Apidura Fork Pack</h2>
+<div class="item-price">от 9800 сом</div>
+<button class="item-button" onclick="addToCart('Apidura Fork Pack', 9800)">В корзину</button>
+<a href="apidurafork.html" class="item-button">Подробнее</a>
+</div>
+</article>
 
-        <!-- Apidura Saddle -->
-        <article class="item">
-            <img src="tb_image_share_1770908212687.png" alt="Apidura Saddle Pack">
-            <div class="item-content">
-                <h2 class="item-title">Apidura Saddle Pack</h2>
-                <div class="item-price">от 22000 сом</div>
-                <a href="apidurasaddle.html" class="item-button">Подробнее</a>
-            </div>
-        </article>
+<!-- Apidura Saddle -->
+<article class="item">
+<img src="tb_image_share_1770908212687.png" alt="Apidura Saddle Pack">
+<div class="item-content">
+<h2 class="item-title">Apidura Saddle Pack</h2>
+<div class="item-price">от 22000 сом</div>
+<button class="item-button" onclick="addToCart('Apidura Saddle Pack', 22000)">В корзину</button>
+<a href="apidurasaddle.html" class="item-button">Подробнее</a>
+</div>
+</article>
 
-    </section>
-
+</section>
 </main>
 
-
 <footer>
-    © 2026 Freetour.kg 
+© 2026 Freetour.kg
 </footer>
+
+<script>
+
+/* 🌙 Переключатель темы */
+document.getElementById("themeToggle").addEventListener("click", function() {
+    document.body.classList.toggle("light-mode");
+});
+
+/* 🛒 Корзина */
+let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+function updateCartCount(){
+    document.getElementById("cartCount").innerText = cart.length;
+}
+
+function addToCart(product, price){
+    cart.push({product, price});
+    localStorage.setItem("cart", JSON.stringify(cart));
+    updateCartCount();
+    alert("Товар добавлен в корзину");
+}
+
+function showCart(){
+    if(cart.length === 0){
+        alert("Корзина пуста");
+        return;
+    }
+
+    let total = 0;
+    let message = "🛒 Ваша корзина:\n\n";
+
+    cart.forEach(item => {
+        message += item.product + " — " + item.price + " сом\n";
+        total += item.price;
+    });
+
+    message += "\nИтого: " + total + " сом";
+    alert(message);
+}
+
+updateCartCount();
+
+</script>
 
 </body>
 </html>
+
 
 
